# repo-index

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: implementation-details.md  quickstart-seedsigner.md
repo_index/: cli.py  config.py  db.py  embed.py  search.py
repo_index/commands/: sources.py  status.py  sync.py
repo_index/ingest/: contributors.py  git.py  github.py
src/repo_index/: __init__.py  models.py  sources_file.py
src/repo_index/commands/: contributors.py  search.py
